# modyne

./: .markdownlintignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  docker-compose.yml  release-please-config.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: release-please.yml  rust.yml
docs/: .markdownlint.json  modyne.md
dynamodb-book/: README.md
dynamodb-book/ch18-sessionstore/: CHANGELOG.md  Cargo.toml  README.md
dynamodb-book/ch18-sessionstore/src/: lib.rs
dynamodb-book/ch18-sessionstore/tests/: localstack.rs
dynamodb-book/ch19-ecomm/: CHANGELOG.md  Cargo.toml  README.md
dynamodb-book/ch19-ecomm/src/: lib.rs
dynamodb-book/ch20-bigtimedeals/: CHANGELOG.md  Cargo.toml  README.md
dynamodb-book/ch20-bigtimedeals/src/: lib.rs
dynamodb-book/ch20-bigtimedeals/tests/: localstack.rs
dynamodb-book/ch21-github/: CHANGELOG.md  Cargo.toml  README.md
dynamodb-book/ch21-github/src/: lib.rs
modyne/: CHANGELOG.md  Cargo.toml
modyne-derive/: CHANGELOG.md  Cargo.toml
modyne-derive/src/: case.rs  entity_def.rs  lib.rs  parsing.rs  projection.rs  symbol.rs  update.rs
modyne/docs/: modyne.md
modyne/src/: error.rs  keys.rs  lib.rs  model.rs  types.rs
src/: error.rs  expr.rs  keys.rs  lib.rs  model.rs
tests/: ch18_sessionstore.rs  ch19_ecomm.rs  ch20_bigtimedeals.rs  ch21_github.rs
