[package]
name = "modyne"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "High-level crate for interacting with single-table DynamoDB instances"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/modyne" 
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliri_braid = "0.4.0"
async-trait = "0.1.66"
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.27.0"
fnv = "1.0.7"
once_cell = "1.17.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_dynamo = { version = "4.2.2", features = ["aws-sdk-dynamodb+0_27"] }
thiserror = "1.0.38"
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1.36"

[dev-dependencies]
aws-credential-types = "0.55.1"
castaway = "0.2.1"
compact_str = { version = "0.7.0", features = ["serde"] }
futures = "0.3.27"
pin-project-lite = "0.2.9"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tokio = { version = "1.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

