[package]
name = "modyne"
version = "0.3.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "High-level crate for interacting with single-table DynamoDB instances"
readme = "../README.md"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/modyne"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

[features]
default = []
derive = ["dep:modyne-derive"]
once_cell = []

[dependencies]
aliri_braid = "0.4.0"
async-trait = "0.1.66"
aws-config = "1.0.1"
aws-sdk-dynamodb = "1.3.0"
fnv = "1.0.7"
modyne-derive = { version = "=0.3.0", optional = true, path = "../modyne-derive" }
serde = { version = "1.0.158", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
thiserror = "1.0.38"
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.37", features = ["sync"] }
tracing = "0.1.36"

[package.metadata.docs.rs]
features = ["derive"]
