[package]
name = "modyne"
version = "0.4.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "High-level crate for interacting with single-table DynamoDB instances"
readme = "../README.md"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/modyne"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.79.0"

[features]
default = []
derive = ["dep:modyne-derive"]
once_cell = []

[dependencies]
aliri_braid = "0.4.0"
async-trait = "0.1.89"
aws-config = "1.8.10"
aws-sdk-dynamodb = "1.98.0"
fnv = "1.0.7"
modyne-derive = { version = "0.4", optional = true, path = "../modyne-derive" }
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48", features = ["sync"] }
tracing = "0.1.41"

# This cfg cannot be enabled, but it still forces Cargo to keep modyne_derive's
# version in lockstep with modyne's, even if someone depends on the two crates
# separately with modyne's "derive" feature disabled. Every modyne_derive release
# is compatible with exactly one modyne release because the generated code
# involves nonpublic APIs which are not bound by semver.
[target.'cfg(any())'.dependencies]
modyne-derive = { version = "=0.4.0", path = "../modyne-derive" }

[package.metadata.docs.rs]
features = ["derive"]
