[package]
name = "dynamodb-book-ch18-sessionstore"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Models from The DynamoDB Book Session Store example"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/dynamodb-book-ch18-sessionstore"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
rust-version = "1.79.0"

[features]
default = []
once_cell = []

[dependencies]
aliri_braid = "0.4.0"
aws-sdk-dynamodb = "1.98.0"
modyne = { version = "0.4.0", path = "../../modyne", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48" }
tracing = "0.1.41"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
aws-config = "1.8.10"
aws-credential-types = "1.2.9"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
tokio = { version = "1.48", features = ["macros"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
