[package]
name = "dynamodb-book-ch19-ecomm"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Models from The DynamoDB Book ECommerce example"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/dynamodb-book-ch19-ecomm"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
rust-version = "1.79.0"

[features]
default = []
once_cell = []

[dependencies]
aliri_braid = "0.4.0"
aws-sdk-dynamodb = "1.98.0"
modyne = { version = "0.4.0", path = "../../modyne", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
svix-ksuid = { version = "0.8.0", features = ["serde"] }
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
tracing = "0.1.41"

[dev-dependencies]
aws-config = "1.8.10"
aws-credential-types = "1.2.9"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
tokio = { version = "1.48", features = ["macros"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
