[package]
name = "dynamodb-book-ch19-ecomm"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Models from The DynamoDB Book ECommerce example"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/dynamodb-book-ch19-ecomm"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[features]
default = []
once_cell = []

[dependencies]
aliri_braid = "0.4.0"
aws-sdk-dynamodb = "1.3.0"
modyne = { version = "0.3.0", path = "../../modyne", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
svix-ksuid = { version = "0.8.0", features = ["serde"] }
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tracing = "0.1.36"

[dev-dependencies]
aws-config = "1.2.1"
aws-credential-types = "1.2.0"
test-log = { version = "0.2.16", default-features = false, features = ["trace"] }
tokio = { version = "1.37", features = ["macros"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
