[package]
name = "dynamodb-book-ch20-bigtimedeals"
version = "0.3.0"
edition = "2021"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Models from The DynamoDB Book Big Time Deals example"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
documentation = "https://docs.rs/dynamodb-book-ch20-bigtimedeals"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
rust-version = "1.74.0"

[features]
default = []
once_cell = []

[dependencies]
aliri_braid = "0.4.0"
aws-sdk-dynamodb = "1.3.0"
futures = "0.3.27"
modyne = { version = "0.3.0", path = "../../modyne", features = ["derive"] }
pin-project-lite = "0.2.9"
serde = { version = "1.0.158", features = ["derive"] }
serde_dynamo = "4.2.3"
svix-ksuid = { version = "0.8.0", features = ["serde"] }
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tracing = "0.1.36"

[dev-dependencies]
aws-config = "1.2.0"
aws-credential-types = "1.2.0"
test-log = { version = "0.2.15", default-features = false, features = ["trace"] }
tokio = { version = "1.37", features = ["macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
