[package]
name = "dynamodb-book-ch21-github"
version = "0.2.0"
edition = "2021"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Models from The DynamoDB Book GitHub example"
keywords = ["dynamodb","aws","aws-sdk","dynamo","orm"]
categories = ["database","api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/dynamodb-book-ch21-github"
homepage = "https://github.com/neoeinstein/modyne"
repository = "https://github.com/neoeinstein/modyne"
license = "MIT OR Apache-2.0"
rust-version = "1.67.0"

[features]
default = []
once_cell = ["modyne/once_cell"]

[dependencies]
aliri_braid = "0.4.0"
aws-sdk-dynamodb = "0.30.0"
castaway = "0.2.1"
compact_str = { version = "0.7.0", features = ["serde"] }
modyne = { version = "0.2.0", path = "../..", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_dynamo = "4.2.3"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
time = { version = "0.3.20", features = ["formatting", "parsing", "serde"] }
tracing = "0.1.36"

[dev-dependencies]
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tokio = { version = "1.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
